<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/RollTheDiceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:text="@string/roll_the_dice"
        android:textColor="@color/design_default_color_secondary"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/Dice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/RollTheDiceTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp">

            <ImageView
                android:id="@+id/ImageView1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/six"
                android:contentDescription="@string/dice_1"
                android:layout_margin="8dp" />

            <ImageView
                android:id="@+id/ImageView2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/six"
                android:contentDescription="@string/dice_2"
                android:layout_margin="8dp" />

            <ImageView
                android:id="@+id/ImageView3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/six"
                android:contentDescription="@string/dice_3"
                android:layout_margin="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp">

            <ImageView
                android:id="@+id/ImageView4"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/six"
                android:contentDescription="@string/dice_4"
                android:layout_margin="8dp" />

            <ImageView
                android:id="@+id/ImageView5"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/six"
                android:contentDescription="@string/dice_5"
                android:layout_margin="8dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="35dp">

        <Button
            android:id="@+id/RollButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/roll"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/design_default_color_secondary"
            android:layout_margin="20dp" />

        <Button
            android:id="@+id/StopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/design_default_color_secondary"
            android:layout_margin="20dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
